apps/my-webserver/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www
  namespace: default
  labels:
    app: www
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      labels:
        app: www
    spec:
      containers:
        - name: www
          image: nginx:529d43d32fbf685264379e8be18bb7719a122bff
          ports:
            - containerPort: 80
